test/assert/bad-assertreturn-non-const.txt
;;; ERROR: 1
;;; FLAGS: --spec
(module
  (func $bar (param f32) (result f32) (get_local 0))
  (export "bar" $bar))

;; NOT ok to use more complex exprs
(assert_return
  (invoke "bar"
    (f32.add (f32.const 1) (f32.const 10)))
  (f32.const 11))
(;; STDERR ;;;
assert/bad-assertreturn-non-const.txt:10:6: syntax error, unexpected BINARY, expecting CONST
;;; STDERR ;;)
